tests/baselines/reference/declarationEmitComputedPropertyNameSymbol1.errors.txt
type.ts(2,16): error TS1155: 'const' declarations must be initialized.


==== type.ts (1 errors) ====
    export namespace Foo {
      export const sym: unique symbol;
                   ~~~
!!! error TS1155: 'const' declarations must be initialized.
    }
    export type Type = { x?: { [Foo.sym]: 0 } };
    
==== index.ts (0 errors) ====
    import { type Type } from "./type";
    
    export const foo = { ...({} as Type) };
    